--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Drawing Node App online",
   "main": "DrawingServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node DrawingServer.js"
   },
   "repository": {
     "type": "git",
